--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@types/mocha": "^10.0.0",
     "erc721a": "^4.2.3",
-    "hardhat-contract-sizer": "^2.6.1"
+    "hardhat-contract-sizer": "^2.6.1",
+    "open": "^8.4.2"
   }
 }
