--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ethereum-waffle": "3.4.0",
     "ethers": "5.5.2",
     "hardhat": "^2.9.5",
-    "hardhat-abi-exporter": "2.3.1",
+    "hardhat-abi-exporter": "^2.10.1",
     "hardhat-gas-reporter": "^1.0.8",
     "solhint": "3.3.6",
     "solidity-coverage": "0.7.17",
